--- a/app/config.json.sample
+++ b/app/config.json.sample
@@ -2,6 +2,11 @@
   "auth": {
     "basic": ["admin", "123456"]
   },
+  "redis": {
+   "host": "localhost",
+   "port": 6379,
+   "db": 10
+  },
   "wechat": {
     "api_url": "https://api.weixin.qq.com/cgi-bin",
     "app_id": "{{wechat_app_id}}",
